# auto2048

./: Cargo.toml  layout.txt
genomes/2019-03-16 01:37:30.446389206 +01:00/: 1.json  2.json
genomes/2019-03-16 19:11:35.302634865 +01:00/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  (+97 more)
genomes/2019-03-16 19:42:31.571099865 +01:00/: 1.json  2.json
genomes/2019-03-16 19:42:41.880050543 +01:00/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  (+710 more)
rustneat/src/: gene.rs  genome.rs  lib.rs  organism.rs
src/: ai.rs  game.rs  main.rs  ui.rs
src/learning/: domain.rs  mod.rs
