[package]
name = "auto2048"
version = "0.1.0"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
open = "1.2.2"
rusty_dashed = "0.2.1"

[dependencies.rustneat]
path = "./rustneat"
features = ["telemetry"]

[dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["ttf","image","gfx","mixer"]

[features]
telemetry = []
